--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -6,10 +6,11 @@
 body{
     background-color:rgb(244,249,244);
     display: grid;
-    grid-template-rows: 300px 400px 60px;
+    grid-template-rows: 300px 400px 200px 60px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "encabezado encabezado encabezado encabezado "
-                         "main   main    main       aside       "
+                         "main       main       main       aside       "
+                         "section    section    section    none"
                          "footer     footer     footer     footer     ";
 }
 
@@ -20,6 +21,10 @@ header{
 main{
     grid-area: main;
 }
+section{
+    grid-area: section;
+    background-image: linear-gradient(rgb(167,215,197),rgb(244, 249, 244));
+}
 footer{
     background-image: linear-gradient(rgb(167,215,197),rgb(244, 249, 244));
     font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
@@ -28,8 +33,9 @@ footer{
     flex-direction: column;
     justify-content: space-between;
 }
+.bg-light{
 
-
+}
 
 a{
     font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
@@ -42,7 +48,7 @@ a{
 .nuevoMenu{
     display: grid;
     grid-area: encabezado;
-    grid-template-rows: 100px 100px 50px;
+    grid-template-rows: 100px 100px 100px;
     grid-template-columns: 20% 20% 20% 20% 20% ;
     grid-template-areas: "logo  encabezado encabezado encabezado encabezadp"
                          "none  subt       subt       subt       subt"
@@ -69,6 +75,7 @@ a{
     text-align: center;
 }
 .menu{
+    width: 100%;
     grid-area: menu;
     display: flex;
     flex-direction: row;
@@ -181,9 +188,25 @@ h4{
     justify-content: center;
     font-size: 30px;
 }
+.contenedorCarrusel{
+    height:400px ;
+}
+.tamImg{
+    width: 100%;
+    height: 100%;
+}
 .img-thumbnail{
     background-color: rgb(116, 180, 155); ;
 }
+/* estilo de la seccion historia*/
+.seccionHistoria{
+    width: 80%;
+}
+.seccionHistoria p{
+    font-family: 'Ubuntu', sans-serif;
+    color: rgb(92, 141, 137);  
+}
+
 /*estilo del aside*/
 aside{
     grid-area: aside;
@@ -283,6 +306,27 @@ font-size: 30px;
     justify-content: space-between;
     align-items: center;
 }
+
+/* Estilo seccion Carta */
+.nav1{
+    width: 100%;
+    grid-area: menu;
+    height: 50px;
+}
+.elementoTabla{
+    background-color:rgb(244,249,244);
+    display: flex;
+    justify-content: center;
+    border: 1px solid rgb(92, 141, 137);
+
+}
+.elementoTabla h3{
+    text-align: center;
+}
+.filaVacia{
+    height: 40px;
+}
+
 /*Estilo de la lista*/
 ul{
     background-color: white;
