--- a/SCSS/estiloSecciones/_estiloCarta.scss
+++ b/SCSS/estiloSecciones/_estiloCarta.scss
@@ -3,21 +3,52 @@
     width: 100%;
     grid-area: menu;
     height: 50px;
+    display: block;
+    @extend .padding-bloque;
 }
-.elementoTabla{
+.nav2{
+    @extend .padding-bloque;
+}
+.tabla-carnes{
+    @extend .padding-bloque;
+}
+.tabla-pastas{
+    @extend .padding-bloque;
+}
+.tabla-ensaladas{
+    @extend .padding-bloque;
+}
+
+@mixin elemento ($tipoElemento) {
+
     background-color:$color4;
     display: flex;
     justify-content: center;
     border: 1px solid $color1;
-
-}
-.elementoTabla h3{
     text-align: center;
+    @if $tipoElemento == t {
+        font-size: 50px;
+        color: $color1; 
+    }       
+    @else if $tipoElemento == p{
+        font-size: 30px;
+        color:$color2;
+    }
 }
-.filaVacia{
-    height: 40px;
+.tabla-general-titulo{
+    h3{
+        @include elemento(t);
+    }
+}
+.tabla-general-elemento{
+    @include elemento(p);
 }
 
+.contenedor-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 /*Estilo de la lista*/
 ul{
     background-color: white;
