--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -3,9 +3,9 @@
   margin: 0px;
   padding: 0px; }
 
-.padding-bloque, .nav1, .nav2, .tabla-carnes, .tabla-pastas, .tabla-ensaladas {
-  padding-top: 20px;
-  padding-bottom: 20px; }
+.padding-bloque, .carta-titulo, .tabla-carnes, .tabla-pastas, .tabla-ensaladas {
+  padding-top: 40px;
+  padding-bottom: 40px; }
 
 /* colores*/
 /* tipos de letras */
@@ -37,21 +37,12 @@ a {
 
 /* Estilo general de todas las paginas */
 body {
-  background-color: #f4f9f4;
-  display: grid;
-  grid-template-rows: 300px auto auto 60px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-areas: "encabezado encabezado encabezado encabezado " "main       main       main       aside       " "section    section    section    none" "footer     footer     footer     footer     "; }
+  background-color: #f4f9f4; }
 
 header {
-  grid-area: encabezado;
   background-image: linear-gradient(#a7d7c5, #f4f9f4); }
 
-main {
-  grid-area: main; }
-
 section {
-  grid-area: section;
   background-image: linear-gradient; }
 
 footer {
@@ -62,115 +53,38 @@ footer {
   flex-direction: column;
   justify-content: space-between; }
 
-/* estilo del header */
-.nuevoMenu {
-  display: grid;
-  grid-area: encabezado;
-  grid-template-rows: 100px 100px 100px;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-areas: "logo  encabezado encabezado encabezado encabezadp" "none  subt       subt       subt       subt" "menu  menu       menu       menu       menu"; }
-
 .logo {
-  grid-area: logo; }
-
-.logo:hover {
-  transform: scale(2, 2); }
+  width: 100px;
+  height: 60px; }
 
 .logo img {
   width: 100%;
   height: 100%; }
 
-.encabezado {
-  grid-area: encabezado; }
-
-.subt {
-  grid-area: subt;
-  text-align: center; }
-
-.menu {
-  width: 100%;
-  grid-area: menu;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between; }
-
-.menu1 {
-  width: 20%;
-  justify-content: center;
-  display: flex; }
-
-.menu1:hover {
-  background-color: #f4f9f4; }
-
-.menu2 {
-  display: flex;
-  width: 20%;
-  justify-content: center; }
-
-.menu2:hover {
-  background-color: #f4f9f4; }
-
-.menu3 {
-  width: 20%;
-  display: flex;
-  justify-content: center; }
-
-.menu3:hover {
-  background-color: #f4f9f4; }
-
-.menu4 {
+.titulo {
   display: flex;
   justify-content: center;
-  width: 20%; }
+  width: 80%;
+  height: 50px; }
 
-.menu4:hover {
-  background-color: #f4f9f4; }
-
-.menu5 {
-  width: 20%;
+.subtitulo {
   display: flex;
-  justify-content: center; }
-
-.menu5:hover {
-  background-color: #f4f9f4; }
-
-/* Estilo del index */
-/* Estilo del main*/
-.contenedorMain {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 50px 400px 50px;
-  grid-template-areas: "tituloMain  tituloMain  tituloMain  " "cajaMain    cajaMain    cajaMain    " "valoracion1 valoracion2 valoracion3  "; }
-
-.tituloMain {
-  grid-area: tituloMain;
-  display: flex;
-  justify-content: center;
-  font-size: 30px; }
-
-.cajaMain {
-  grid-area: cajaMain;
-  display: flex;
-  background-color: #c6c6f5; }
-
-.recomendacion {
-  height: 300px;
-  width: 100%;
-  padding-left: 2px; }
-
-.recomendacion .imagen img {
-  height: 300px;
+  justify-content: flex-end;
   width: 100%; }
 
-.recomendacion .valoracion {
+.menu {
+  display: flex;
+  justify-content: space-evenly; }
+
+.menu-item {
   display: flex;
   justify-content: center;
-  font-size: 30px; }
+  align-items: center; }
 
-.contenedorCarrusel {
-  height: 400px; }
+/* Estilo del index */
+.carrusel-contenedor {
+  height: 350px;
+  width: 100%; }
 
 .tamImg {
   width: 100%;
@@ -187,18 +101,14 @@ footer {
   font-family: "Ubuntu", sans-serif;
   color: #5c8d89; }
 
-/*estilo del aside*/
-aside {
-  grid-area: aside;
-  width: 100%;
-  height: 400px; }
-
 .publicidad {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center; }
+
+.publicidad-imagen {
+  width: 100%; }
 
 .publicidad img {
   width: 100%;
@@ -207,51 +117,53 @@ aside {
 /*Estilo seccion locales*/
 /* bloque sucursales */
 .sucursales {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50px 400px;
-  grid-template-areas: "tituloSucursales tituloSucursales" "sucursal1        sucursal2"; }
+  width: auto;
+  height: 400px; }
 
 .sucursales-titulo {
-  grid-area: tituloSucursales;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  font-size: 30px;
-  justify-content: center; }
+  border: solid 3px;
+  border-color: #5c8d89;
+  width: auto;
+  font-size: 40px;
+  align-items: center;
+  text-align: center;
+  display: block; }
 
 .sucursales-primera {
-  grid-area: sucursal1;
-  width: 100%;
-  height: 100%;
-  padding-left: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-
-.sucursales-primera-img {
-  width: 100%;
-  height: 100%; }
-
-.sucursales-primera-img img {
-  width: 100%;
-  height: 100%; }
-
-.sucursales-segunda {
-  grid-area: sucursal2;
-  width: 100%;
-  height: 100%;
+  height: 350px;
   padding-left: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; }
 
-.sucursales-segunda-img {
+.sucursales-primera-titulo {
+  width: 100%;
+  height: 10%;
+  text-align: center; }
+
+.sucursales-primera-img {
+  height: 90%; }
+
+.sucursales-primera-img img {
   width: 100%;
   height: 100%; }
+
+.sucursales-segunda {
+  height: 350px;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.sucursales-segunda-titulo {
+  width: 100%;
+  height: 10%;
+  text-align: center; }
+
+.sucursales-segunda-img {
+  height: 90%; }
 
 .sucursales-segunda-img img {
   width: 100%;
@@ -259,8 +171,7 @@ aside {
 
 /* bloque horarios     */
 .horarios {
-  width: 100%;
-  height: 100%;
+  height: 350px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -274,74 +185,70 @@ aside {
 
 /* bloque ubicaciones */
 .ubicaciones {
-  width: 100%;
-  height: 300px;
-  display: flex; }
+  height: 500px;
+  display: flex;
+  flex-direction: column; }
+
+.ubicaciones-titulo {
+  height: 30%; }
+
+.ubicaciones-contenedor {
+  height: 70%; }
 
 .ubicaciones-primera {
-  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
 
 .ubicaciones-primera-direccion {
-  width: 100%;
-  height: 10%; }
+  height: 30%; }
 
 .ubicaciones-primera-mapa {
-  width: 100%;
-  height: 80%; }
+  height: 70%; }
 
 .ubicaciones-primera-mapa img {
   width: 100%;
-  height: 75%; }
+  height: 100%; }
 
 .ubicaciones-segunda {
-  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
 
 .ubicaciones-segunda-direccion {
-  width: 100%;
-  height: 10%; }
+  height: 30%; }
 
 .ubicaciones-segunda-mapa {
-  width: 100%;
-  height: 80%; }
+  height: 70%; }
 
 .ubicaciones-segunda-mapa img {
   width: 100%;
-  height: 75%; }
+  height: 100%; }
 
 /* bloque servicios */
 .servicios {
   width: 100%;
-  height: 320px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 50px 250px;
-  grid-template-areas: "servicios  servicios       servicios" "vigilancia estacionamiento wifi";
-  grid-column-gap: 10px; }
+  height: 350px; }
 
 .servicios-titulo {
-  grid-area: servicios;
+  text-align: center;
+  height: 30%; }
+
+.servicios-contenedor {
   width: 100%;
-  height: 100%; }
+  height: 70%; }
 
 .servicios-vigilancia {
-  grid-area: vigilancia;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
   height: 100%; }
 
 .servicios-vigilancia-img {
   width: 100%;
-  height: 100%; }
+  height: 80%; }
 
 .servicios-vigilancia-img img {
   width: 100%;
@@ -349,20 +256,18 @@ aside {
 
 .servicios-vigilancia-nombre {
   width: 100%;
-  height: 100%;
+  height: 20%;
   text-align: center; }
 
 .servicios-estacionamiento {
-  grid-area: estacionamiento;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
   height: 100%; }
 
 .servicios-estacionamiento-img {
   width: 100%;
-  height: 100%; }
+  height: 80%; }
 
 .servicios-estacionamiento-img img {
   width: 100%;
@@ -370,20 +275,18 @@ aside {
 
 .servicios-estacionamiento-nombre {
   width: 100%;
-  height: 100%;
+  height: 20%;
   text-align: center; }
 
 .servicios-wifi {
-  grid-area: wifi;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
   height: 100%; }
 
 .servicios-wifi-img {
   width: 100%;
-  height: 100%; }
+  height: 80%; }
 
 .servicios-wifi-img img {
   width: 100%;
@@ -391,8 +294,20 @@ aside {
 
 .servicios-wifi-nombre {
   width: 100%;
-  height: 100%;
+  height: 20%;
   text-align: center; }
+
+@media only screen and (max-width: 576px) {
+  .sucursales {
+    height: 1050px; }
+  .sucursales-primera {
+    width: 100%; }
+  .sucursales-segunda-img {
+    width: 100%; }
+  .ubicaciones {
+    height: auto; }
+  .servicios {
+    height: auto; } }
 
 /* Estilo seccion Reservas*/
 .formularioReserva {
@@ -404,20 +319,14 @@ aside {
   justify-content: space-evenly;
   align-items: center; }
 
-/* Estilo seccion Contacto */
-.mainContacto {
-  background-color: #a7d7c5;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; }
+.reserva-titulo {
+  text-align: center;
+  height: 50px; }
 
+/* Estilo seccion Contacto */
 /* Estilo seccion Carta */
-.nav1 {
-  width: 100%;
-  grid-area: menu;
-  height: 50px;
-  display: block; }
+.carta-titulo {
+  text-align: center; }
 
 .tabla-general-titulo h3 {
   background-color: #f4f9f4;
