--- a/SCSS/estructuras/_estiloGeneral.scss
+++ b/SCSS/estructuras/_estiloGeneral.scss
@@ -1,23 +1,14 @@
 /* Estilo general de todas las paginas */
 body {
     background-color: #f4f9f4;
-    display: grid;
-    grid-template-rows: 300px auto auto 60px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-areas: "encabezado encabezado encabezado encabezado "
-   "main       main       main       aside       "
-   "section    section    section    none"
-   "footer     footer     footer     footer     "; }
-  
+}
+
   header {
-    grid-area: encabezado;
-    background-image: linear-gradient(#a7d7c5, #f4f9f4); }
-  
-  main {
-    grid-area: main; }
-  
+    background-image: linear-gradient(#a7d7c5, #f4f9f4);
+   }
+   
   section {
-    grid-area: section;
+
     background-image: linear-gradient; }
   
   footer {
@@ -27,3 +18,36 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
+
+.logo{
+  width: 100px;
+  height: 60px;}
+
+  .logo img{
+    width: 100%;
+    height: 100%;
+  }
+
+.titulo{
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  height: 50px;
+}
+.subtitulo{
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  
+}
+.menu{
+  display: flex;
+  justify-content: space-evenly;
+
+}
+.menu-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
