se agrego un parcial para las mediaqueries

--- a/SCSS/estilo.scss
+++ b/SCSS/estilo.scss
@@ -11,3 +11,4 @@
 @import "./estiloSecciones/estiloReservas";
 @import "./estiloSecciones/estiloContacto";
 @import "./estiloSecciones/estiloCarta";
+@import "./queries/localesQueries";
