--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -101,16 +101,16 @@ footer {
   font-family: "Ubuntu", sans-serif;
   color: #5c8d89; }
 
-.publicidad {
+.promo {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center; }
 
-.publicidad-imagen {
+.promo-imagen {
   width: 100%; }
 
-.publicidad img {
+.promo img {
   width: 100%;
   height: 350px; }
 
