cambios esteticos y open graph

--- a/SCSS/estilo.scss
+++ b/SCSS/estilo.scss
@@ -4,6 +4,7 @@
 @import "./utilidades/fuentes";
 @import "./utilidades/estilosTexto/hs";
 @import "./utilidades/estilosTexto/as";
+@import "./utilidades/botones";
 @import "./estructuras/estiloGeneral";
 @import "./estructuras/header";
 @import "./estiloSecciones/estiloIndex";
@@ -12,3 +13,4 @@
 @import "./estiloSecciones/estiloContacto";
 @import "./estiloSecciones/estiloCarta";
 @import "./queries/localesQueries";
+@import "./queries/reservasQueries";
