--- a/SCSS/estiloSecciones/_estiloContacto.scss
+++ b/SCSS/estiloSecciones/_estiloContacto.scss
@@ -1,1 +1,7 @@
 /* Estilo seccion Contacto */
+.contacto-titulo{
+    text-align: center;
+}
+.contacto-contenedor{
+    border: 1px solid $color1;
+}
