--- a/SCSS/estiloSecciones/_estiloCarta.scss
+++ b/SCSS/estiloSecciones/_estiloCarta.scss
@@ -1,51 +1,50 @@
 /* Estilo seccion Carta */
-
+.carta-encabezado{
+    display: flex;
+    justify-content: flex-end;
+}
 .carta-titulo{
     @extend .padding-bloque;
     text-align: center;
-}
-.tabla-carnes {
-    @extend .padding-bloque;
-}
-.tabla-pastas {
-    @extend .padding-bloque;
-}
-.tabla-ensaladas {
-    @extend .padding-bloque;
-}
-
-@mixin elemento($tipoElemento) {
-    background-color: $color4;
-    display: flex;
-    justify-content: center;
-    border: 1px solid $color1;
-    text-align: center;
-    @if $tipoElemento == t {
-        font-size: 50px;
-        color: $color1;
-    } @else if $tipoElemento == p {
-        font-size: 30px;
-        color: $color2;
+    h2{
+        font-size: 55px;
     }
 }
 .tabla-general-titulo {
-    h3 {
-        @include elemento(t);
+    background-color:$color3;
+    display: flex;
+    justify-content: center;
+    border: 1px solid $color1;
+    border-radius: 6px;
+    text-align: center;
+    font-size: 50px;
+
+    h3{
+        color: $color4;
     }
 }
-.tabla-general-elemento {
-    @include elemento(p);
-}
-
 .contenedor-main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-/*Estilo de la lista*/
-ul {
-    background-color: white;
+.card{
+    border: 1px solid $color2;
+    margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background:#fff;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+	transition: all 400ms ease-out;
+	cursor: default;
+    img{
+        height: 250px;
+    }
 }
-li {
-    font-size: 20px;
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+.card-body{
+    height: 100px;
 }
