correcciones en js para la segunda entrega del proyecto

--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -328,6 +328,10 @@ footer {
 .reserva-formulario-contenedor {
   border: solid 1px #5c8d89; }
 
+.fecha {
+  display: flex;
+  justify-content: center; }
+
 /* Estilo seccion Contacto */
 .contacto-titulo {
   text-align: center; }
@@ -353,8 +357,7 @@ footer {
   border-radius: 6px;
   text-align: center;
   font-size: 50px; }
-  
-.tabla-general-titulo h3 {
+  .tabla-general-titulo h3 {
     color: #f4f9f4; }
 
 .contenedor-main {
