se arreglo el bug que hacia que desaparecieran los elementos creados en el dom

--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -407,3 +407,7 @@ footer {
 @media only screen and (max-width: 576px) {
   .reserva-titulo {
     padding-bottom: 90px; } }
+
+  #reservas-hechas{
+    height: auto;
+  }
