--- a/SCSS/estilo.scss
+++ b/SCSS/estilo.scss
@@ -14,3 +14,4 @@
 @import "./estiloSecciones/estiloCarta";
 @import "./queries/localesQueries";
 @import "./queries/reservasQueries";
+@import "./queries/header";
