--- a/SCSS/estructuras/_estiloGeneral.scss
+++ b/SCSS/estructuras/_estiloGeneral.scss
@@ -59,3 +59,12 @@ body {
 	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
 	transform: translateY(-3%);
 }
+.enlace a{
+  display: block;
+  text-align: center;
+  width: 100%; 
+  height: 100%
+}
+.enlace h2{
+  font-size: 20px;
+}
