--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -95,6 +95,15 @@ footer {
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-3%); }
 
+.enlace a {
+  display: block;
+  text-align: center;
+  width: 100%;
+  height: 100%; }
+
+.enlace h2 {
+  font-size: 20px; }
+
 /* Estilo del index */
 .carrusel-contenedor {
   height: 350px;
@@ -332,31 +341,13 @@ footer {
   display: flex;
   justify-content: center; }
 
-.reservado{
-  background-color: rgb(191, 71, 71);
-}
-.disponible{
-  background-color: rgb(52, 153, 52);
-}
-
-.mensaje-exito{
-  
-  border: 2px solid #84b1b5;
-    background-color: #c8dee1;
-    display: flex;
-    justify-content: center;
-}
 /* Estilo seccion Contacto */
 .contacto-titulo {
   text-align: center; }
 
 .contacto-contenedor {
   border: 1px solid #5c8d89; }
-.comentario{
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
+
 /* Estilo seccion Carta */
 .carta-encabezado {
   display: flex;
@@ -403,6 +394,20 @@ footer {
   height: 100px; }
 
 /* queries de la seccion locales */
+@media screen and (min-width: 576px) {
+  .servicios-contenedor {
+    display: flex;
+    justify-content: space-around; }
+  .servicios-vigilancia {
+    height: 50%;
+    width: 15%; }
+  .servicios-estacionamiento {
+    height: 50%;
+    width: 15%; }
+  .servicios-wifi {
+    height: 50%;
+    width: 15%; } }
+
 @media only screen and (max-width: 576px) {
   .sucursales {
     height: 1050px; }
@@ -426,6 +431,6 @@ footer {
   .reserva-titulo {
     padding-bottom: 90px; } }
 
-  #reservas-hechas{
-    height: auto;
-  }
+@media only screen and (min-width: 576px) and (max-width: 776px) {
+  .enlace h2 {
+    font-size: 0.90em; } }
